# Aicruzz-2

./: .dockerignore  .env.example  DEPLOY.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/ai-router/: Dockerfile  package.json  tsconfig.json
apps/ai-router/src/: index.ts  router.ts
apps/ai-router/src/health/: health.monitor.ts
apps/ai-router/src/providers/: anthropic.provider.ts  base.provider.ts  capabilities.ts  elevenlabs.provider.ts  (+8 more)
apps/api/: drizzle.config.ts  package.json  tsconfig.json
apps/api/drizzle/: 0000_classy_paladin.sql  0001_sturdy_pretty_boy.sql  0002_worthless_ikaris.sql  0003_add_job_diagnostics.sql  0005_add_video_agent_meta.sql  0006_add_video_changer_face_swap.sql
apps/api/src/: app.ts  index.ts
apps/web/: .gitignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: DeleteModal.tsx  FileUploader.tsx
apps/web/contexts/: AuthContext.tsx
apps/web/hooks/: useAvatarPipeline.ts  useVideoEvents.ts
apps/web/lib/: api.ts  bannerPrefill.ts  cn.ts  duration.ts  nav.ts
apps/web/store/: Providers.tsx
apps/webrtc/: Dockerfile  package.json  tsconfig.json
apps/webrtc/src/: index.ts  server.ts  typings.d.ts
apps/worker/: Dockerfile  pyproject.toml  verify_liveportrait.py
apps/worker/app/: __init__.py  main.py
apps/worker/app/routes/: avatar_reenact.py  face_swap.py  health.py  voice.py
apps/worker/app/services/: gpu_manager.py  liveportrait_engine.py
(+255 files in other folders)
